<resources>
    <string name="app_name">UtsBCA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="antar_rekening">antar_rekening</string>
    <string name="antar_bank">antar_bank</string>
    <string name="name">name</string>
    <string name="name_hint">name_hint</string>
    <string name="submit">submit</string>
    <string name="BCA_Virtual_Account">BCA_Virtual_Account</string>
    <string name="Sakuku">Sakuku</string>
    <string name="title_activity_antar__rekening">Antar_RekeningActivity</string>
    <string name="mBCA">mBCA</string>
    <string name="klikBCA">klikBCA</string>
    <string name="infoBCA">infoBCA</string>
    <string name="about">about</string>
    <string name="bank">bank</string>
    <string name="bank_hint">bank_hint</string>
    <string name="kerekening_tujuan">kerekening_tujuan</string>
    <string name="rekening_tujuan_hint">rekening_tujuan_hint</string>
    <string name="rek_tujuan">rek_tujuan</string>
    <string name="title_activity_antar__bank">Antar_BankActivity</string>
    <string name="title_activity_sakuku">SakukuActivity</string>
    <string name="title_activity_mbca">MbcaActivity</string>
    <string name="title_activity_klikbca">KlikbcaActivity</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="password_hint">password_hint</string>
    <string name="ussername">ussername</string>
    <string name="ussername_hint">ussername</string>
    <string name="rek_tujuan_hint">rek_tujuan_hint</string>
    <string name="jum_uang">jum_uang</string>
    <string name="jum_uang_hint">jum_uang_hint</string>
    <string name="kirim">kirim</string>
    <string name="title_activity_succeslogin">SuccesloginActivity</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
