<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <Button
        android:id="@+id/button_mbca"
        android:text="@string/mBCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/button_klikBCA"
        android:text="@string/klikBCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/button_infoBCA"
        android:text="@string/infoBCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/button_about"
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>