<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.Antar_BankActivity"
    tools:showIn="@layout/activity_antar__bank">

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="3">

        <TextView
            android:layout_marginStart="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bank">

        </TextView>

        <EditText
            android:id="@+id/input_bank1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/bank_hint">

        </EditText>



    </LinearLayout>


    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="3">

        <TextView
            android:layout_marginStart="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rek_tujuan">

        </TextView>

        <EditText
            android:id="@+id/input_rekening_tujuan1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/rek_tujuan_hint">

        </EditText>



    </LinearLayout>

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="3"
        >
        <TextView
            android:layout_marginStart="1dp"
            android:text="@string/jum_uang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <EditText
            android:id="@+id/input_jum_uang"
            android:hint="@string/jum_uang_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />
    </LinearLayout>


    <Button
        android:text="@string/kirim"
        android:id="@+id/kirim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/text_output3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Hello Bank, Congratulations!"
        />

    <TextView
        android:id="@+id/text_output4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Hello rek_tujuan, Congratulations!"
        />

    <TextView
        android:id="@+id/text_output5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Hello jum_uang, Congratulations!"
        />
</LinearLayout>