<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.TransferFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="113dp"
        android:layout_height="105dp"
        android:src="@drawable/logo_bca" />

    <Button
        android:id="@+id/button_antar_rekening"
        android:text="@string/antar_rekening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/button_antar_bank"
        android:text="@string/antar_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <Button
        android:id="@+id/button_sakuku"
        android:text="@string/Sakuku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>