<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.KlikbcaActivity"
    tools:showIn="@layout/activity_klikbca">

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="3">

        <TextView
            android:layout_marginStart="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ussername">

        </TextView>

        <EditText
            android:id="@+id/input_ussername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/ussername_hint">

        </EditText>



    </LinearLayout>


    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="3">

        <TextView
            android:layout_marginStart="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password">

        </TextView>

        <EditText
            android:id="@+id/input_bank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/password_hint">

        </EditText>



    </LinearLayout>


    <Button
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/text_output2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Hello name, Congratulations!"
        />

    <TextView
        android:id="@+id/text_output3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Hello name, Congratulations!"
        />


</LinearLayout>